<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/text_security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security"
        android:textStyle="bold"
        android:elevation="8dp"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_margin="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/pink_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        app:cardElevation="@dimen/dimen_16"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        android:layout_marginTop="60dp"
        app:cardBackgroundColor="@color/peach"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_security"
        />

    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/sos"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />

    <TextView
        android:id="@+id/sos_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/sosmsg"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/sos_img"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toBottomOf="@id/text_sos">

    </TextView>

    <ImageView
        android:id="@+id/sos_img"
        android:layout_width="96dp"
        android:layout_margin="16dp"
        android:layout_height="96dp"
        android:elevation="16dp"
        android:src="@drawable/img"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/green_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardElevation="@dimen/dimen_16"
        android:layout_margin="16dp"
        android:layout_marginTop="176dp"
        app:cardBackgroundColor="@color/seagreen"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/pink_card"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:text="@string/guard"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card" />

    <TextView
        android:id="@+id/guard_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:text="@string/guardmsg"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:elevation="@dimen/dimen_16"
        app:layout_constraintEnd_toStartOf="@id/guard_img"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toBottomOf="@id/text_guard" />

    <ImageView
        android:id="@+id/guard_img"
        android:layout_width="96dp"
        android:layout_margin="16dp"
        android:layout_height="96dp"
        android:elevation="16dp"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"/>

</androidx.constraintlayout.widget.ConstraintLayout>







